@@ -1,3 +1,8 @@
+2010-05-26  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Project/CProjectBinding.cs: Only create single file projects
+	  for C/C++ files.
+
 2010-05-25  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Compiler/GNUCompiler.cs: Don't include the generic () errors
